prometheus/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-dashboard
  labels:
    name: prometheus-grafana-dashboard
spec:
  rules:
    - host: prometheus.grafana.dashboard.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
